--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8">
+<!-- JQeury -->
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+<!-- Custom -->
+<script type="text/javascript" src="public/record.js"></script>
 <title>測試</title>
 </head>
 <body>
-    <h1>標題</h1>
-    <p>段落</p>
+	<button id="record">Record</button> 
+	<button id="stopRecord" disabled>Stop</button>
+	<audio id="recordedAudio"></audio>
 </body>
 </html>
